# aitrios-rpi-application-module-library

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: cibw_before_build_linux.sh  cibw_before_build_win.sh  docs.yaml  repair_wheel_win.sh  unittest.yaml  wheels.yaml
docs/: index.html  llms.txt
docs/docs/: 404.html  index.html  sitemap.xml
docs/docs/Home/: index.html
docs/docs/api-reference/: index.html
docs/docs/api-reference/apps/annotate/: index.html
docs/docs/api-reference/apps/area/: index.html
docs/docs/api-reference/apps/heatmap/: index.html
docs/docs/api-reference/apps/matcher/: index.html
docs/docs/api-reference/apps/object_counter/: index.html
docs/docs/api-reference/apps/tracker/: index.html
docs/docs/api-reference/category/apps/: index.html
docs/docs/assets/css/: styles.069bcb1f.css
docs/docs/assets/js/: 05019006.543c7c11.js  09b9224b.6831f9e1.js  109f1412.447643c0.js  11210ceb.9465c1c5.js  11b43341.24ebe721.js  1477b6f0.256274ed.js  14eb3368.76344137.js  17896441.1beee5c8.js  19f15301.660e7f47.js  1c727bd0.1703ee2f.js  237.3d4c1512.js  29444bf0.8df1a16b.js  2c0f31a5.83f51c94.js  2d4b7c6a.563b6dae.js  305b0e90.fc539f17.js  33dc7959.098008f0.js  35910ad6.be9d40f0.js  4532f9df.a4386b5a.js  534e93d0.b242014a.js  58433992.49c8bf38.js  5e95c892.575f239c.js  60b0fae2.bfe1242c.js  68b60e7e.a54fe712.js  68ea884e.9bd4e9dc.js  78edd515.a0651552.js  7e34eb02.7098da86.js  7e615644.96ad9f51.js  878258fe.18a33730.js  9035d291.dc512f34.js  958.e5139946.js  a7456010.c3a0b925.js  a7bd4aaa.e27ad24e.js  a8e78255.d04e3311.js  a94703ab.e5aa8f62.js  ab4caad6.601300f0.js  aba21aa0.3e90b3fb.js  ad644cb8.23c4f9fd.js  b40ddad1.9e19caff.js  b880ab73.d2f1c34c.js  c260b502.9d7955fa.js  (+8 more)
docs/docs/category/application-modules/: index.html
docs/docs/category/getting-started/: index.html
docs/docs/examples/area/: index.html
docs/docs/examples/counter/: index.html
docs/docs/examples/heatmap/: index.html
docs/docs/examples/matcher/: index.html
docs/docs/examples/tracker/: index.html
docs/docs/getting_started/custom_models/: index.html
docs/docs/getting_started/devices/: index.html
docs/docs/getting_started/hello_world/: index.html
docs/docs/getting_started/model_zoo/: index.html
docs/docs/motivation/: index.html
docs/en/application-module-library/docs/: 1.0.0.html  1.1.0.html  1.2.0.html  1.3.0.html  404.html  api-reference.html  index.html  llms.html  motivation.html  release_notes.html
docs/src/: index.md  llms.md  motivation.md  release_notes.md
docs/src/devices/: _category_.json  ai_camera.md  interpreters.md  triton.md
docs/src/examples/: _category_.json  area.md  blur.md  calculate.md  counter.md  heatmap.md  instance_segmentation.md  matcher.md  motion.md  recording.md  tracker.md
docs/src/getting_started/: custom_models.md  data_injection.md  devices.md  hello_world.md  model_zoo.md
examples/: get_assets.py
examples/aicam/: classifier.py  cropping.py  detector.py  device_id.py  input_only.py  instance_segment.py  model_dps.py  posenet.py  segment.py  yolo-classifier.py  yolo-obb.py  yolo-pose.py  yolo-segment.py  yolo.py
examples/aicam/data_injection/: data_injection_minimal_cls.py  data_injection_minimal_od.py  data_injection_minimal_pose.py  data_injection_minimal_seg.py  evaluator_minimal_cls.py  evaluator_minimal_od.py  evaluator_minimal_pose.py  evaluator_minimal_seg.py
examples/apps/: area.py  blur_face.py  blur_object.py  counter.py  distance.py  heatmap.py  matcher.py  matcher_motion.py  motion.py  speed_calc.py  threads.py  tracker.py  tracker_matcher.py
examples/interpreters/: evaluator_minimal_cls.py  evaluator_minimal_od.py  evaluator_minimal_pose.py  interpreter_yolo.py  sources_images.py  sources_video.py
examples/interpreters/docker/: Dockerfile  README.md  interpreter_keras.py  interpreter_onnx.py  requirements-keras-tf2.13.txt  requirements-keras-tf2.14.txt  requirements-onnx.txt  server.py
examples/triton/: _test.py  anomaly.py  classifier.py  cropping.py  detector.py  posenet.py  segment.py  threads.py  triton_models.py  upload.py
modlib/apps/: __init__.py  annotate.py  area.py  blur.py  heatmap.py  matcher.py  motion.py  object_counter.py
modlib/apps/tracker/: basetrack.py  byte_tracker.py  kalman_filter.py  matching.py
modlib/devices/: __init__.py  device.py  frame.py  sources.py
modlib/devices/ai_camera/: ai_camera.py  imx500.py  rpk_packager.py  utils.py
modlib/devices/imx500/: __init__.py  isp.py
modlib/devices/interpreters/: __init__.py  client.py  keras_interpreter.py
modlib/devices/playback/: __init__.py  codecs.py  playback.py  recorder.py
modlib/devices/triton/: triton.py
modlib/devices/utils/: imx500_converter.py
modlib/models/: __init__.py  model.py  results.py
modlib/models/evals/: __init__.py  classification.py  coco.py  evaluator.py  statistical_relationship.py  voc.py
modlib/models/post_processors/: __init__.py  post_processors.py
modlib/models/post_processors/cpp/: personlab_decoder.cpp
modlib/models/post_processors/posenet_decoder/: Makefile  posenet_binding.cpp
modlib/models/pre_processors/: __init__.py  pre_processors.py
modlib/models/zoo/: __init__.py  models.py
tests/: test_devices.py  test_sources.py  utils.py
tests/apps/: test_annotator.py  test_area.py  test_blur.py  test_heatmap.py  test_matcher.py  test_object_counter.py  test_tracker.py
tests/assets/: .gitignore  create_recording.py  test_evaluationsamples_effdet.pkl
tests/assets/recordings/: classification_recording.json  detection_recording.json  od_samples.json  tea_nobg.json
tests/devices/: test_aicamera.py  test_aicamera_deploy.py  test_frame.py  test_isp.py
tests/models/: test_evals_classification.py  test_evals_coco.py  test_evals_voc.py  test_post_processors.py  test_results_classifications.py  test_results_detections.py  test_results_instance_segments.py  test_results_roi.py
(+917 files in other folders)
